// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Dialog, Shown 1`] = `
Array [
  .c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  font-weight: 600;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  vertical-align: middle;
  white-space: nowrap;
  border-style: solid;
  border-width: 0.0625rem;
  background: #FFFFFF;
  border-color: #C1C6CC;
  color: #CC1F36;
}

.c0:focus {
  box-shadow: 0 0 0 0.15rem rgba(204,31,54,0.25);
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c0[disabled]:hover,
.c0[disabled]:active,
.c0[disabled]:focus {
  background-color: #FFFFFF;
  border-color: #C1C6CC;
  color: #CC1F36;
}

.c0:hover,
.c0:focus,
.c0.hover {
  background: #FFFFFF;
  border-color: #CC1F36;
  color: #990F14;
}

.c0:active,
.c0.active {
  background: #CC1F36;
  border-color: #CC1F36;
  color: #FFFFFF;
}

<button
    className="c0 c1"
    onClick={[Function]}
    style={
      Object {
        "lineHeight": "34px",
      }
    }
  >
    Delete Stuff
  </button>,
  .c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  background-color: #DEE1E5;
  height: 100%;
  opacity: 0.6;
  position: fixed;
  width: 100%;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 0.25rem;
  box-shadow: 0 3px 18px rgba(0,0,0,0.12),0 1px 4px rgba(0,0,0,0.04);
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  max-width: 100%;
  position: absolute;
}

.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1.25rem;
}

.c7 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  margin-right: 2rem;
}

.c9 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.75rem;
}

.c11 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1.375rem;
  margin-left: auto;
  padding: 0rem;
}

.c12 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1em;
  width: 1em;
}

.c13 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 1.25rem;
}

.c14 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  margin-right: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c16 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c10 {
  font-weight: 600;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  vertical-align: middle;
  white-space: nowrap;
  border-style: solid;
  border-width: 0.0625rem;
  background: transparent;
  border-color: transparent;
  color: #64518A;
}

.c10:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c10[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c10[disabled]:hover,
.c10[disabled]:active,
.c10[disabled]:focus {
  background-color: transparent;
  border-color: transparent;
  color: #64518A;
}

.c10:hover,
.c10:focus,
.c10.hover {
  background: #F3F2FF;
  border-color: #F3F2FF;
  color: #6C43E0;
}

.c10:active,
.c10.active {
  background: #E8E5FF;
  border-color: #E8E5FF;
  color: #6C43E0;
}

.c15 {
  font-weight: 600;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  vertical-align: middle;
  white-space: nowrap;
  border-style: solid;
  border-width: 0.0625rem;
  background: #CC1F36;
  border-color: #CC1F36;
  color: #FFFFFF;
}

.c15:focus {
  box-shadow: 0 0 0 0.15rem rgba(204,31,54,0.25);
}

.c15[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c15[disabled]:hover,
.c15[disabled]:active,
.c15[disabled]:focus {
  background-color: #CC1F36;
  border-color: #C1C6CC;
}

.c15:hover,
.c15:focus,
.c15.hover {
  background: #B2121F;
  border-color: #B2121F;
}

.c15:active,
.c15.active {
  background: #990F14;
  border-color: #990F14;
}

.c8 {
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-transform: none;
}

.c1 {
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  cursor: pointer;
}

.c1.entering,
.c1.exiting {
  opacity: 0.01;
}

.c1.exited {
  opacity: 0.6;
}

.c4 {
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
  -webkit-transition: transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
  transition: transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
}

.c3.entering,
.c3.exiting {
  opacity: 0.01;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
}

.c3.exited {
  opacity: 1;
  -webkit-transform: translateY(0%);
  -ms-transform: translateY(0%);
  transform: translateY(0%);
}

<div
    className="c0"
  >
    <div
      className="faux c1 c2"
      onClick={[Function]}
    />
    <div
      className="faux c3 c4 c5"
    >
      <header
        className="c6"
      >
        <div
          className="c7"
        >
          <h2
            className="c8 c9"
          >
            Are you sure you want to delete "Stuff"?
          </h2>
        </div>
        <button
          className="c10 c11"
          onClick={[Function]}
          style={
            Object {
              "lineHeight": 1,
            }
          }
        >
          <div
            className="c12"
          >
            <svg
              fill="currentColor"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
                fill="currentColor"
              />
            </svg>
          </div>
        </button>
      </header>
      <footer
        className="c13"
      >
        <button
          className="c10 c14"
          style={
            Object {
              "lineHeight": "34px",
            }
          }
        >
          Cancel
        </button>
        <button
          className="c15 c16"
          style={
            Object {
              "lineHeight": "34px",
            }
          }
        >
          Yes, Delete "Stuff"
        </button>
      </footer>
    </div>
  </div>,
]
`;

exports[`Dialog Hidden 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  font-weight: 600;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  vertical-align: middle;
  white-space: nowrap;
  border-style: solid;
  border-width: 0.0625rem;
  background: #64518A;
  border-color: #64518A;
  color: #FFFFFF;
}

.c0:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c0[disabled]:hover,
.c0[disabled]:active,
.c0[disabled]:focus {
  background-color: #64518A;
  border-color: #C1C6CC;
}

.c0:hover,
.c0:focus,
.c0.hover {
  background: #473764;
  border-color: #473764;
}

.c0:active,
.c0.active {
  background: #2A1B60;
  border-color: #2A1B60;
}

<button
  className="c0 c1"
  onClick={[Function]}
  style={
    Object {
      "lineHeight": "34px",
    }
  }
>
  🥑
</button>
`;

exports[`Dialog Shown 1`] = `
.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  background-color: #DEE1E5;
  height: 100%;
  opacity: 0.6;
  position: fixed;
  width: 100%;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 0.25rem;
  box-shadow: 0 3px 18px rgba(0,0,0,0.12),0 1px 4px rgba(0,0,0,0.04);
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  max-width: 100%;
  position: absolute;
}

.c1 {
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  cursor: pointer;
}

.c1.entering,
.c1.exiting {
  opacity: 0.01;
}

.c1.exited {
  opacity: 0.6;
}

.c4 {
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
  -webkit-transition: transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
  transition: transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
}

.c3.entering,
.c3.exiting {
  opacity: 0.01;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
}

.c3.exited {
  opacity: 1;
  -webkit-transform: translateY(0%);
  -ms-transform: translateY(0%);
  transform: translateY(0%);
}

<div
  className="c0"
>
  <div
    className="faux c1 c2"
    onClick={[Function]}
  />
  <div
    className="faux c3 c4 c5"
  >
    <div>
      simple content
    </div>
  </div>
</div>
`;

exports[`Dialog, backdrop customized 1`] = `
Array [
  .c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
  font-size: 1rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0rem;
  padding-bottom: 0rem;
}

.c0 {
  font-weight: 600;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  vertical-align: middle;
  white-space: nowrap;
  border-style: solid;
  border-width: 0.0625rem;
  background: #64518A;
  border-color: #64518A;
  color: #FFFFFF;
}

.c0:focus {
  box-shadow: 0 0 0 0.15rem rgba(100,81,138,0.25);
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c0[disabled]:hover,
.c0[disabled]:active,
.c0[disabled]:focus {
  background-color: #64518A;
  border-color: #C1C6CC;
}

.c0:hover,
.c0:focus,
.c0.hover {
  background: #473764;
  border-color: #473764;
}

.c0:active,
.c0.active {
  background: #2A1B60;
  border-color: #2A1B60;
}

<button
    className="c0 c1"
    onClick={[Function]}
    style={
      Object {
        "lineHeight": "34px",
      }
    }
  >
    🥑
  </button>,
  .c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 1;
}

.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  cursor: pointer;
  background-color: #DEE1E5;
  height: 100%;
  opacity: 0.6;
  position: fixed;
  width: 100%;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  border-radius: 0.25rem;
  box-shadow: 0 3px 18px rgba(0,0,0,0.12),0 1px 4px rgba(0,0,0,0.04);
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-height: 90vh;
  max-width: 100%;
  position: absolute;
}

.c1 {
  -webkit-transition: opacity 200ms;
  transition: opacity 200ms;
  cursor: pointer;
  background: purple;
  opacity: 1;
}

.c1.entering,
.c1.exiting {
  opacity: 0.01;
}

.c1.exited {
  opacity: 0.6;
}

.c4 {
  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
  -webkit-transition: transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
  transition: transform 300ms cubic-bezier(0.86,0,0.07,1), opacity 300ms cubic-bezier(0.86,0,0.07,1);
}

.c3.entering,
.c3.exiting {
  opacity: 0.01;
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
}

.c3.exited {
  opacity: 1;
  -webkit-transform: translateY(0%);
  -ms-transform: translateY(0%);
  transform: translateY(0%);
}

<div
    className="c0"
  >
    <div
      className="faux c1 c2"
      onClick={[Function]}
    />
    <div
      className="faux c3 c4 c5"
    >
      <div>
        simple content
      </div>
    </div>
  </div>,
]
`;
